Fixed some edge cases bugs
Signed-off-by: Ronil Biswas <ronilbiswas.8937@gmail.com>